# cpp-neural-network

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: activation_function.hpp  adam_optimizer.hpp  cross_entropy_loss.hpp  fully_connected_layer.hpp  identity.hpp  layer.hpp  loss_function.hpp  mean_squared_error_loss.hpp  neural_network.hpp  optimizer.hpp  relu.hpp  sigmoid.hpp  vanilla_sgd_optimizer.hpp
src/: adam_optimizer.cpp  cross_entropy_loss.cpp  fully_connected_layer.cpp  identity.cpp  main.cpp  mean_squared_error_loss.cpp  mnist.cpp  neural_network.cpp  optimizer.cpp  relu.cpp  sigmoid.cpp  vanilla_sgd_optimizer.cpp
